Fix footer overflowing viewport on case studies

--- a/_assets/sass/partials/_footer.sass
+++ b/_assets/sass/partials/_footer.sass
@@ -13,6 +13,15 @@
     margin: 0 ($paddingMax * -1)
     padding: 4.5em $paddingMax
 
+  .page--study &
+    margin: 0
+
+    @media (min-width: 42em)
+      margin: 0
+
+    @media (min-width: 80em)
+      margin: 0
+
   &__cta
     color: $white
     display: inline-block
